--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "AI Connector",
 	"short_name": "AI Connector",
 	"lang": "en-US",
-	"start_url": "/index.html",
+	"start_url": "index.html",
 	"theme_color": "#209CEE",
 	"background_color": "#209CEE",
 	"description": "AI Connector",
